--- a/css/nav.css
+++ b/css/nav.css
@@ -5,22 +5,21 @@ body{
     padding: 2px;
     display: block;
     font-family:"Arial","Microsoft YaHei","黑体","宋体",sans-serif;
-    background-color: #2196f3;
+    background-color: #0d304c;
 }
 ul{
     list-style-type:none;
 }
 .nav{
     line-height: 25px;
-    height: 150px;
-    padding-left:0px;
+    height: 300px;
 }
 .drop{
     float:left;
-    margin-left:30px;
-    font-size:15px;
+    margin-left:40px;
+    font-size: 1.2em;
 }
-a{
+.title{
     text-decoration:none;
     color:#fff;
 }
